Url correction, intro update, improve readability

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -29,15 +29,18 @@ body {
 h1, h2, h3, h4, h5 {
   font-family: $font-secondary;
   font-weight: 600;
+  text-shadow: 1px 1px rgba($black, 0.1);
 }
 
 p {
   margin: $padding-md 0;
+  text-shadow: 1px 1px rgba($black, 0.1);
 }
 
 a {
   color: $primary;
   text-decoration: none;
+  text-shadow: 1px 1px rgba($black, 0.1);
   transition: color 200ms linear;
 
   &:hover,
