--- a/src/components/common/SectionAnimated.scss
+++ b/src/components/common/SectionAnimated.scss
@@ -110,6 +110,7 @@
     font-weight: 900;
     text-transform: uppercase;
     line-height: $header-height-xs;
+    text-shadow: none;
     display: inline-block;
     color: rgba($white, 0.5);
     background: -webkit-linear-gradient(45deg, $white, rgba($white, 0.3));
